src/test/deca/syntax/invalid/custom/not_lvalue.deca
// Description:
//    tests de programme incorrect lexicalement (pas de lvalue à gauche)
//
// Resultats:
//    ligne 10 : Erreur, pas de lvalue à gauche (sur fin de fichier)
//
// Historique:
//    cree le 07/01/2022

{
        println("1 2 3 ");
        5 = 4;
}

